<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/spacing_normal"
    android:paddingBottom="@dimen/spacing_normal"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_primary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/primary_button"
            style="@style/TitleText"/>
        <Button
            android:id="@+id/btn_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/save"
            style="@style/AppTheme.Button.Primary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/normal_state"
            style="@style/AppTheme.TextAppearance.Small"/>
        <Button
            android:id="@+id/btn_primary_disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/save"
            android:enabled="false"
            style="@style/AppTheme.Button.Primary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/disabled_state"
            style="@style/AppTheme.TextAppearance.Small"/>

        <TextView
            android:id="@+id/tv_secondary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/secondary_button"
            style="@style/TitleText"/>
        <Button
            android:id="@+id/btn_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/reedeem"
            style="@style/AppTheme.Button.Secondary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/normal_state"
            style="@style/AppTheme.TextAppearance.Small"/>
        <Button
            android:id="@+id/btn_secondary_disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/reedeem"
            android:enabled="false"
            style="@style/AppTheme.Button.Secondary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/disabled_state"
            style="@style/AppTheme.TextAppearance.Small"/>

        <TextView
            android:id="@+id/tv_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/image_button"
            style="@style/TitleText"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/btn_minus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:enabled="false"
                android:src="@drawable/ic_minus"
                android:contentDescription="@string/cd_btn_minus"
                style="@style/AppTheme.Button.Primary"/>
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="0"
                android:gravity="center"
                style="@style/AppTheme.TextAppearance.Large"/>
            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/cd_btn_plus"
                style="@style/AppTheme.Button.Primary"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>